--- a/recompute/server/templates/recomputation.html
+++ b/recompute/server/templates/recomputation.html
@@ -1,79 +1,66 @@
-
 {% extends "layout.html" %}
 
 {% block content %}
 
-    <div class="page-header">
-        <h1>Recomputation: {{ recomputation.name }}</h1>
-        <h4>
-            <a href="{{ url_for('edit_recomputation', name=recomputation.name) }}"><i class="fa fa-pencil"></i> Edit</a>&nbsp;&nbsp;
-            <a href="{{ url_for('rebuild_recomputation', name=recomputation.name) }}"><i class="fa fa-refresh"></i> Rebuild</a>&nbsp;&nbsp;
-            <a href="{{ url_for('delete_recomputation', name=recomputation.name) }}" class="delete"><i class="fa fa-trash-o"></i> Delete</a>
-        </h4>
+<div class="page-header">
+    <h1>Recomputation: {{ recomputation.name }}</h1>
+    <h4>
+        <a href="{{ url_for('edit_recomputation', name=recomputation.name) }}"><i class="fa fa-pencil"></i> Edit</a>&nbsp;&nbsp;
+        <a href="{{ url_for('update_recomputation', name=recomputation.name) }}"><i class="fa fa-refresh"></i> Update</a>&nbsp;&nbsp;
+        <a href="{{ url_for('delete_recomputation', name=recomputation.name) }}" class="delete"><i class="fa fa-trash-o"></i> Delete</a>
+    </h4>
+</div>
+
+
+<div class="row">
+    <div class="col-md-4">
+        <ul class="list-group">
+            <li class="list-group-item"><span>Name: {{ recomputation.name }}</span></li>
+            <li class="list-group-item"><span>ID: {{ recomputation.id }}</span></li>
+            <li class="list-group-item"><span>GitHub: <a href="{{ recomputation.github_url }}">{{ recomputation.github_url }}</a></span></li>
+            <li class="list-group-item"><span>Last Updated: {{ recomputation.releases[0].date }}</span></li>
+        </ul>
     </div>
+</div>
 
-
-    <div class="row">
-        <div class="col-md-4">
-            <ul class="list-group">
-                <li class="list-group-item"><span>Name: {{ recomputation.name }}</span></li>
-                <li class="list-group-item"><span>ID: {{ recomputation.id }}</span></li>
-                <li class="list-group-item"><span>GitHub: {{ recomputation.github }}</span></li>
-                <li class="list-group-item"><span>Last Updated: {{ recomputation.date }}</span></li>
-            </ul>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-md-12">
-            <div class="panel panel-warning">
-                <div class="panel-heading">
-                    <h3 class="panel-title">
-                        <i class="fa fa-bullseye"></i>Builds
-                    </h3>
-                </div>
-
-                <table class="table table-striped table-hover">
-                    <thead>
-                        <tr>
-                            <th>TAG</th>
-                            <th>VERSION</th>
-                            <th>DATE</th>
-                            <th>PLAY</th>
-                            <th>DOWNLOAD</th>
-                            <th class="delete">DELETE</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>{{ recomputation.tag }}</td>
-                            <td>{{ recomputation.version }}</td>
-                            <td>{{ recomputation.date }}</td>
-                            <td><a onclick="recomputation_play('{{ recomputation.name }}');"><i class="fa fa-play-circle"></i> Play</a></td>
-                            <td><a href="{{ url_for('download_vagrantbox', name=recomputation.name) }}"><i class="fa fa-download"></i> Download</a></td>
-                            <td><a onclick="recomputation_delete('{{ recomputation.name }}');" class="delete"><i class="fa fa-trash-o"></i> Delete</a></td>
-                        </tr>
-
-                        <tr>
-                            <td>{{ recomputation.tag }}</td>
-                            <td>{{ recomputation.version }}</td>
-                            <td>{{ recomputation.date }}</td>
-                            <td><a onclick="recomputation_play('{{ recomputation.name }}');"><i class="fa fa-play-circle"></i> Play</a></td>
-                            <td><a onclick="recomputation_download('{{ recomputation.name }}');"><i class="fa fa-download"></i> Download</a></td>
-                            <td><a onclick="recomputation_delete('{{ recomputation.name }}');" class="delete"><i class="fa fa-trash-o"></i> Delete</a></td>
-                        </tr>
-
-                        <tr>
-                            <td>{{ recomputation.tag }}</td>
-                            <td>{{ recomputation.version }}</td>
-                            <td>{{ recomputation.date }}</td>
-                            <td><a onclick="recomputation_play('{{ recomputation.name }}');"><i class="fa fa-play-circle"></i> Play</a></td>
-                            <td><a onclick="recomputation_download('{{ recomputation.name }}');"><i class="fa fa-download"></i> Download</a></td>
-                            <td><a onclick="recomputation_delete('{{ recomputation.name }}');" class="delete"><i class="fa fa-trash-o"></i> Delete</a></td>
-                        </tr>
-                    </tbody>
-                </table>
+<div class="row">
+    <div class="col-md-12">
+        <div class="panel panel-warning">
+            <div class="panel-heading">
+                <h3 class="panel-title">
+                    <i class="fa fa-bullseye"></i> Builds
+                </h3>
             </div>
+
+            <table class="table table-striped table-hover">
+                <thead>
+                <tr>
+                    <th>TAG</th>
+                    <th>VERSION</th>
+                    <th>GITHUB</th>
+                    <th>LAST UPDATED</th>
+                    <th>PLAY</th>
+                    <th>DOWNLOAD</th>
+                    <th class="delete">DELETE</th>
+                </tr>
+                </thead>
+
+                <tbody>
+                {% for release in recomputation.releases %}
+                <tr>
+                    <td>{{ release.tag }}</td>
+                    <td>{{ release.version }}</td>
+                    <td><a href="{{ release.github_url + '/tree/' + release.github_commit }}">{{ release.github_commit }}</a></td>
+                    <td>{{ release.date }}</td>
+                    <td><a onclick="play('{{ recomputation.name }}');"><i class="fa fa-play-circle"></i> Play</a></td>
+                    <td><a href="{{ url_for('download_vagrantbox', name=recomputation.name) }}"><i class="fa fa-download"></i> Vagrantbox</a></td>
+                    <td><a href="{{ url_for('delete_vagrantbox', name=recomputation.name) }}" class="delete"><i class="fa fa-trash-o"></i> Delete</a></td>
+                </tr>
+                {% endfor %}
+                </tbody>
+
+            </table>
         </div>
     </div>
+</div>
 {% endblock %}
