--- a/recompute/server/templates/boxes.html
+++ b/recompute/server/templates/boxes.html
@@ -7,4 +7,44 @@
         <h1>Boxes</h1>
     </div>
 
+    <div class="top-buffer row">
+        <div class="col-md-12">
+            <div class="row">
+                <div class="col-md-6">
+                    <form class="form-inline" action="{{ url_for('boxes_page') }}" method="POST">
+                        {{ filter_boxes_form.hidden_tag() }}
+                        <div class="form-group">
+                            <label for="language" >Language</label>
+                            {{ filter_boxes_form.language(class="form-control", placeholder="language") }}
+                        </div>
+
+                        <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i> Search</button>
+                    </form>
+                </div>
+            </div>
+
+            <table class="top-buffer table table-striped table-hover">
+                <thead>
+                    <tr>
+                        <th>LANGUAGE</th>
+                        <th>VERSION</th>
+                        <th>LAST UPDATED</th>
+                        <th>PLAY</th>
+                        <th>DOWNLOAD</th>
+                    </tr>
+                </thead>
+                <tbody>
+                {% for box in all_boxes %}
+                    <tr>
+                        <td>{{ box.language }}</a></td>
+                        <td>{{ box.version }}</td>
+                        <td>{{ box.date }}</td>
+                        <td><a onclick="#"><i class="fa fa-play-circle"></i> Play</a></td>
+                        <td><a href="#"><i class="fa fa-download"></i> Vagrantbox</a></td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
+    </div>
 {% endblock %}
