--- a/recompute/server/templates/boxes.html
+++ b/recompute/server/templates/boxes.html
@@ -15,7 +15,7 @@
                         {{ filter_boxes_form.hidden_tag() }}
                         <div class="form-group">
                             <label for="language" >Language</label>
-                            {{ filter_boxes_form.language(class="form-control", placeholder="language") }}
+                            {{ filter_boxes_form.language(class="form-control", placeholder="Language") }}
                         </div>
 
                         <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i> Search</button>
