--- a/recompute/server/templates/index.html
+++ b/recompute/server/templates/index.html
@@ -59,7 +59,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                {% for recomputation in latest_recomputations %}
+                {% for recomputation in latest_recomputations_summary %}
                     <tr>
                         <td><a href="{{ url_for('recomputation_page', name=recomputation.name) }}">{{ recomputation.name }}</a></td>
                         <td>{{ recomputation.id }}</td>
