--- a/recompute/server/templates/recomputation.html
+++ b/recompute/server/templates/recomputation.html
@@ -4,6 +4,7 @@
 
 <div class="page-header">
     <h1>Recomputation: {{ recomputation.name }}</h1>
+    <h4>Description</h4>
     <h4>
         <a href="{{ url_for('edit_recomputation', name=recomputation.name) }}"><i class="fa fa-pencil"></i> Edit</a>&nbsp;&nbsp;
         <a href="{{ url_for('update_recomputation', name=recomputation.name) }}"><i class="fa fa-refresh"></i> Update</a>&nbsp;&nbsp;
