--- a/recompute/server/templates/layout.html
+++ b/recompute/server/templates/layout.html
@@ -33,12 +33,9 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li {% if request.path== url_for(
-                'index_page') %} class="active" {% endif %}><a href="{{ url_for('index_page') }}">Home</a></li>
-                <li {% if request.path== url_for(
-                'recomputations_page') %} class="active" {% endif %}><a href="{{ url_for('recomputations_page') }}">Recomputations</a></li>
-                <li {% if request.path== url_for(
-                'boxes_page') %} class="active" {% endif %}><a href="{{ url_for('boxes_page') }}">Boxes</a></li>
+                <li {% if request.path== url_for('index_page') %} class="active" {% endif %}><a href="{{ url_for('index_page') }}">Home</a></li>
+                <li {% if request.path== url_for('recomputations_page') %} class="active" {% endif %}><a href="{{ url_for('recomputations_page') }}">Recomputations</a></li>
+                <!--<li {% if request.path== url_for('boxes_page') %} class="active" {% endif %}><a href="{{ url_for('boxes_page') }}">Boxes</a></li>-->
             </ul>
         </div>
         <!--/.nav-collapse -->
