--- a/recompute/server/templates/index.html
+++ b/recompute/server/templates/index.html
@@ -24,7 +24,7 @@
                 {{ recompute_form.hidden_tag() }}
                 <div class="form-group">
                     <label for="name">Name</label>
-                    {{ recompute_form.name(class="form-control", placeholder="Name", size="15")}}
+                    {{ recompute_form.recomputation(class="form-control", placeholder="Name", size="15")}}
                 </div>
 
                 <div class="form-group">
@@ -37,7 +37,8 @@
                     {{ recompute_form.box(class="form-control")}}
                 </div>
 
-                <button type="submit" class="btn btn-primary">Create</button>
+                <!--<button type="submit" class="btn btn-primary">Create</button>-->
+                <button type="button" onclick="recompute(recomputation.value, github_url.value, box.value);" class="btn btn-primary">Create</button>
             </form>
         </div>
 
